DFHack future

DFHack 0.40.11-r1

    Internals:
        - Plugins on OS X now use ".plug.dylib" as an extension instead of ".plug.so"
    Fixes:
        - hack-wish should work now

DFHack v0.40.10-r1

A few bugfixes.

DFHack v0.40.08-r2

    Internals:
        supported per save script folders
        Items module: added createItem function
        Sorted CMakeList for plugins and plugins/devel
        diggingInvaders no longer builds if plugin building is disabled
        EventManager:
            EQUIPMENT_CHANGE now triggers for new units
            new events:
                ON_REPORT
                UNIT_ATTACK
                UNLOAD
                INTERACTION

    New scripts:
        lua/
            repeat-util.lua
                makes it easier to make things repeat indefinitely
            syndrome-util.lua
                makes it easier to deal with unit syndromes
        scripts/
            forum-dwarves.lua
                helps copy df viewscreens to a file
            full-heal.lua
                fully heal a unit
            remove-wear.lua
                removes wear from all items in the fort
            repeat.lua
                repeatedly calls a script or a plugin
            ShowUnitSyndromes.rb
                shows syndromes affecting units and other relevant info
            teleport.lua
                teleports units
        scripts/devel/
            print-args.lua
        scripts/fix/
            blood-del.lua
                makes it so civs don't bring barrels full of blood ichor or goo
            feeding-timers.lua
                reset the feeding timers of all units
        scripts/gui/
            hack-wish.lua
                creates items out of any material
            unit-info-viewer.lua
                displays information about units
        scripts/modtools/
            add-syndrome.lua
                add a syndrome to a unit or remove one
            anonymous-script.lua