@@ -89,6 +89,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(autodump autodump.cpp)
     DFHACK_PLUGIN(autolabor autolabor.cpp)
     DFHACK_PLUGIN(automaterial automaterial.cpp)
+    DFHACK_PLUGIN(automelt automelt.cpp)
     DFHACK_PLUGIN(autotrade autotrade.cpp)
     DFHACK_PLUGIN(burrows burrows.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(building-hacks building-hacks.cpp LINK_LIBRARIES lua)
